--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-hello <!DOCTYPE html>
-<html lang="en-us">
-
-<head>
-  <meta charset="UTF-8">
-  <title>My First Page</title>
-</head>
-
+---
+layout: default
+---
 <body>
   <!-- Headline -->
   <h1>Hello World!</h1>
@@ -64,5 +59,5 @@ hello <!DOCTYPE html>
 
 </body>
 
-</html>
+
 
